fixed alignment on nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,10 +26,14 @@ header {
   width: 200px;
   font-size: 28px;
   color: #cccccc;
-  background-color: #4aaaa5;  
+  background-color: #4aaaa5; 
+  display: flex;
+  align-items: center;
+  justify-content: center 
 }
 
 .nav-bar .main-nav {
+  float: right;
   font-size: 28px;
   color: #cccccc;
   display: flex;
